#feature: edit is added to project

--- a/assets/css/master.scss
+++ b/assets/css/master.scss
@@ -8,4 +8,5 @@
 
 //components
 @import "./components/layout";
-@import "./components/customMenu"
+@import "./components/customMenu";
+@import "./components/locationList";
