#fix:the locationlist-header is change to sticky

--- a/assets/css/components/_locationList.scss
+++ b/assets/css/components/_locationList.scss
@@ -1,12 +1,18 @@
 .location-list {
     background: #fff;
     border: 1px solid #ddd;
-    padding: 10px;
     border-radius: 5px;
     // box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     height: 460px;
     overflow-y: auto;
     overflow-x: hidden;
+
+    .location-header{
+        position: sticky;
+        top: 0;
+        background: white;
+        z-index: 100;
+    }
 
     @include media-query(992px){
         min-height: auto;
